@startuml Figura 14C - Módulo Asistencias y Horarios

' Configuración
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide circle
skinparam shadowing false

title Figura 14C. Diagrama de Clases – Módulo Asistencias y Horarios

' ============================================
' CLASES DEL MÓDULO ASISTENCIAS Y HORARIOS
' ============================================

class HorarioClase {
  +idHorarioClase: int
  +idGradoSeccion: int
  +idDocente: int
  +materia: string
  +diaSemana: int
  +horaInicio: DateTime
  +horaFin: DateTime
  +aula: string
  +activo: boolean
  +sesiones: int
  +tipoActividad: TipoActividadEnum
  +toleranciaMin: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear()
  +actualizar()
  +eliminar()
  +activar()
  +desactivar()
  +obtenerAsistencias()
  +estaEnHorario()
  +verificarConflicto()
}

enum TipoActividadEnum {
  CLASE_REGULAR
  REFORZAMIENTO
  RECUPERACION
  EVALUACION
}

class DocenteAula {
  +idDocenteAula: int
  +idDocente: int
  +idGradoSeccion: int
  +idTipoAsignacion: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +asignar()
  +actualizar()
  +remover()
  +verificarAsignacion()
}

class TipoAsignacion {
  +idTipoAsignacion: int
  +nombre: string
  --
  +crear()
  +actualizar()
  +eliminar()
  +listarTodos()
}

class Asistencia {
  +idAsistencia: int
  +idEstudiante: int
  +idHorarioClase: int
  +fecha: DateTime
  +idEstadoAsistencia: int
  +horaRegistro: DateTime
  +registradoPor: int
  +observaciones: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +registrar()
  +actualizar()
  +eliminar()
  +cambiarEstado()
  +aplicarJustificacion()
  +obtenerHistorico()
  +esTardanza()
  +esInasistencia()
  +compararConAsistenciaIE()
}

class AsistenciaIE {
  +idAsistenciaIE: int
  +idEstudiante: int
  +idIe: int
  +fecha: DateTime
  +horaIngreso: DateTime
  +horaSalida: DateTime
  +estado: string
  +registradoIngresoPor: int
  +registradoSalidaPor: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +registrarIngreso()
  +registrarSalida()
  +actualizar()
  +escanearQR()
  +calcularTiempoEstancia()
  +estaEnIE()
  +validarHorario()
}

class EstadoAsistencia {
  +idEstadoAsistencia: int
  +nombreEstado: string
  +activo: boolean
  +afectaAsistencia: boolean
  +codigo: string
  +requiereJustificacion: boolean
  --
  +crear()
  +actualizar()
  +eliminar()
  +activar()
  +desactivar()
  +listarTodos()
  +esPresente()
  +esTardanza()
  +esFalta()
}

class HistoricoEstadoAsistencia {
  +idHistorico: int
  +idAsistencia: int
  +idEstadoAsistencia: int
  +fechaCambio: DateTime
  +cambiadoPor: int
  --
  +registrar()
  +obtenerPorAsistencia()
}

' ============================================
' RELACIONES
' ============================================

' Horarios
HorarioClase ..> TipoActividadEnum
DocenteAula -- TipoAsignacion

' Asistencias
HorarioClase -- Asistencia
EstadoAsistencia -- Asistencia
Asistencia *-- HistoricoEstadoAsistencia
EstadoAsistencia -- HistoricoEstadoAsistencia

' ============================================
' NOTAS EXPLICATIVAS
' ============================================

note top of HorarioClase
  **Horario de Clases**
  
  Define los horarios de clases
  para cada aula (GradoSeccion).
  
  **Atributos clave:**
  • diaSemana: 1-7 (Lun-Dom)
  • toleranciaMin: minutos de
    tolerancia para tardanzas
  • tipoActividad: tipo de clase
  
  Base para el registro de
  asistencias por clase.
end note

note right of Asistencia
  **Asistencia por Clase**
  
  Registra la asistencia del
  estudiante a una clase
  específica según horario.
  
  **Función:**
  • Registro por docente
  • Control por materia
  • Comparación con AsistenciaIE
  • Aplicación de justificaciones
  
  **Estados posibles:**
  • Presente
  • Tardanza
  • Falta
  • Justificado
  • Permiso
end note

note left of AsistenciaIE
  **Asistencia con QR**
  
  **MEJORA CLAVE DEL DOP:**
  Reemplaza el "sellado de agenda"
  manual por registro digital
  automático mediante QR.
  
  **Ventajas:**
  • Registro instantáneo (2-3 seg)
  • Reducción de errores (99%)
  • Trazabilidad completa
  • Notificación automática
  • Hora exacta de ingreso/salida
  
  **Proceso:**
  1. Estudiante presenta código QR
  2. Auxiliar escanea con lector
  3. Sistema registra automáticamente
  4. Notifica al apoderado
end note

note bottom of EstadoAsistencia
  **Control de Estados**
  
  Define el estado de la asistencia.
  Base para reportes y alertas.
  
  **Estados principales:**
  • Presente
  • Tardanza
  • Falta
  • Justificado
  • Permiso
  • Falta Injustificada
  
  **Atributos clave:**
  • afectaAsistencia: Si cuenta
    para porcentaje
  • requiereJustificacion: Si es
    obligatorio justificar
end note

legend right
  **Módulo Asistencias y Horarios**
  
  **Responsabilidad:**
  Gestiona horarios de clases y
  registro de asistencias.
  
  **Componentes:**
  • Horarios (4 clases)
  • Asistencias (4 clases)
  
  **Clases:** 8
  
  **Mejora DOP:**
  AsistenciaIE - Registro con QR
  (90% reducción en tiempo)
  
  **Relaciones:**
  *-- Composición
  --  Asociación
  ..> Dependencia
endlegend

@enduml
